@@ -1,4 +1,12 @@
-﻿drkns 29.09.2015 09:06:03 +0200 - build 4428
+﻿drkns 29.09.2015 21:44:11 +0200 - build 4429
+
+1. С форума: "Что-то случилось с сообщениями при удалении сетевого диска после 4424"
+
+2. В подтверждение отключения subst-диска добавлено отображение пути.
+
+3. Пара мелочей.
+
+drkns 29.09.2015 09:06:03 +0200 - build 4428
 
 1. gcc build fix
 
